# 30DoC

1/app/: Cargo.toml  README.md
1/app/src/: main.rs
10/minigrep/: Cargo.toml
10/minigrep/src/: lib.rs  main.rs
11/lifetimes/: Cargo.toml
11/lifetimes/src/: lib.rs  main.rs
12/: README.md
12/decoder/src/: decoder.rs
13/decoder/: Cargo.toml
13/decoder/src/: main.rs
14/: README.md
15/decoder/src/: decoder.rs  main.rs
15/wave_reader/: Cargo.toml
15/wave_reader/src/: main.rs  wave_reader.rs
16/wave_reader/src/: main.rs  wave_reader.rs
17/wave_reader/: tmp
17/wave_reader/src/: main.rs  wave_reader.rs
18/: README.md
19/: README.md
2/calculator/: Cargo.toml  README.md
2/calculator/src/: main.rs
20/itertest/: Cargo.toml
20/itertest/src/: main.rs
24/itertools/: Cargo.toml
24/itertools/src/: main.rs
26/chunks/: Cargo.toml
26/chunks/src/: main.rs
27/decoder/: Cargo.toml
27/decoder/src/: wave_reader.rs
29/pa/: Cargo.toml
29/pa/src/: main.rs
29/wave_visualiser/: Cargo.toml
29/wave_visualiser/src/: main.rs  wave_reader.rs
3/stack/: Cargo.toml  README.md
3/stack/src/: lib.rs
30/fft/: Cargo.toml
30/fft/src/: lib.rs  main.rs
4/docs/: Cargo.toml  README.md
4/docs/src/: lib.rs
5/: README.md
6/application/: Cargo.toml  README.md
6/application/src/: main.rs
7/generic_functions/: Cargo.toml
7/generic_functions/src/: main.rs
8/enums/: Cargo.toml
8/enums/src/: main.rs
9/: README.md
