[package]
name = "decoder"
version = "0.1.0"
authors = ["geekskick <geeks_kick@yahoo.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.8"
byteorder = "1.3.4"
textplots = "0.5.1"
term_size="0.3.2"